# ethquad_rotors

./: README.md
rotors_sim/: graph.py  run_rotors.bash
rotors_sim/devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
rotors_sim/devel/.private/catkin_simple/: .catkin  .rosinstall  setup.sh
rotors_sim/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
rotors_sim/devel/.private/eigen_catkin/: .catkin  .rosinstall  setup.sh
rotors_sim/devel/.private/eigen_checks/: .catkin  .rosinstall  setup.sh
rotors_sim/devel/.private/glog_catkin/: .catkin  .rosinstall  setup.sh
rotors_sim/devel/include/: nlopt.f  nlopt.h  nlopt.hpp
rotors_sim/devel/lib/: libglog.la  libglog.so.0  libglog.so.0.0.0  libnlopt_cxx.la
rotors_sim/logs/glog_catkin/: build.make.000.log.stderr
rotors_sim/logs/mav_trajectory_generation_ros/: build.check.012.log.stderr  build.check.020.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.004.log.stderr  build.make.007.log.stderr  build.make.011.log.stderr  build.make.013.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr  build.make.019.log.stderr  build.make.021.log.stderr  build.make.046.log.stderr  build.make.053.log.stderr  build.make.054.log.stderr  build.make.055.log.stderr  build.make.060.log.stderr  build.make.073.log.stderr  build.make.074.log.stderr  build.make.075.log.stderr  build.make.076.log.stderr  build.make.077.log.stderr  build.make.086.log.stderr  build.make.087.log.stderr
rotors_sim/logs/nlopt/: build.make.000.log.stderr  build.make.001.log.stderr
rotors_sim/logs/path_planning/: build.make.000.log.stderr  build.make.001.log.stderr  build.make.019.log.stderr  build.make.095.log.stderr
rotors_sim/logs/rotors_control/: build.cmake.000.log.stderr
rotors_sim/logs/rotors_gazebo_plugins/: build.make.000.log.stderr
rotors_sim/logs/serial_comm/: build.cmake.000.log.stderr
rotors_sim/src/: test_input.bash
rotors_sim/src/rotors_control/: CMakeLists.txt  package.xml
rotors_sim/src/rotors_control/include/rotors_control/: asmc_position_controller.h  lee_position_controller.h  parameters.h  parameters_ros.h  smc_position_controller.h  smc_position_controller_cen.h  smc_position_controller_decen.h
rotors_sim/src/rotors_control/src/nodes/: asmc_position_controller_node.cpp  asmc_position_controller_node.h  lee_position_controller_node.cpp  lee_position_controller_node.h  pcl_pcl2.cpp  periodic_snapshotter.cpp  smc_position_controller_node.cpp  smc_position_controller_node.h  smc_position_controller_node_cen.cpp  smc_position_controller_node_decen.cpp  udp_publisher.cpp  udp_python.py  untitled.py
(+481 files in other folders)
